deepseek-r1-distill/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kserve-deepseek
spec: {}
status: {}
