deepseek-r1-distill/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: deepseek-ui
  namespace: kserve-deepseek

spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: kserve-ingress-gateway
    namespace: kserve

  hostnames:
  - deepseek-ui.llm.bearingpoint.com

  rules:
  - backendRefs:
    - kind: Service
      name: deepseek-kserve-workload-svc
      port: 8000
      weight: 1
